# udrb

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.yml
.github/workflows/: build-images.yml
app/: Cargo.toml  Dockerfile  README.md
app/src/: main.rs
app/src/chrome/: info.rs  mod.rs
app/src/config/: mod.rs
app/src/renderer/: mod.rs
app/src/slack/: mod.rs
browser/: Dockerfile  README.md  entry.sh
config/: .env-example  .gitignore  config.toml.example  config.yaml.example  domains-example.yaml  domains.yaml.example
server/: Cargo.toml
