[package]
name = "app"
version = "0.2.0"
authors = ["lacop <lacop@lacop.net>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
constant_time_eq = "0.3"
env_logger = "0.11"
hex = "0.4"
hmac-sha256 = "1.1"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
serde_regex = "1.1"
serde_yaml = "0.9"
url = "2.5"

# base64 = "0.10.1"
# dns-lookup = "1.0.0"
# time = "0.1.42"
# websocket = "0.22.3"
