[package]
name = "app"
version = "0.2.0"
authors = ["lacop <lacop@lacop.net>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
constant_time_eq = "0.3"
dns-lookup = "2.0"
env_logger = "0.11"
hex = "0.4"
hmac-sha256 = "1.1"
log = "0.4"
mail-parser = "0.9"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
serde_regex = "1.1"
serde_yaml = "0.9"
sha3 = "0.10"
url = "2.5"
websocket = "0.27"
